--- a/app/views/psd-revised-flow/add-business-to-notification/duplicate-business-add-multiple.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/duplicate-business-add-multiple.html
@@ -20,152 +20,169 @@
 
     <form class="form" action="duplicate-business-add-single" method="post"> 
 
-      <h1 class="govuk-heading-l">
-        <span class="govuk-caption-l ">{{title}}</span>
-        This business may already be in our database
-      </h1>
+    <h1 class="govuk-heading-l">
+      <span class="govuk-caption-l ">{{title}}</span>
+      This business may already be in our database
+    </h1>
 
-      <p class="govuk-body govuk-!-margin-top-8">We have found businesses with shared details.</p>
+    <p class="govuk-body govuk-!-margin-top-8">We have found <strong>3</strong> businesses with shared details.</p>
 
-      <h3 class="govuk-heading-m govuk-!-margin-bottom-2">
-        Your business
-      </h3>
-      <dl class="govuk-summary-list govuk-!-margin-bottom-7">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__value">
-            <h1 class="govuk-heading-s">Trading name</h1>
-          </dt>
-          <dd class="govuk-summary-list__value">
-            Fishpool Toys Ltd    
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__value">
-            <h1 class="govuk-heading-s">Registered or legal name</h1>
-          </dt>
-          <dd class="govuk-summary-list__value">
-            FISHPOOL TOYS LTD
-          </dd>
-        </div>
-      </dl>
+    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
-      <h3 class="govuk-heading-m govuk-!-margin-bottom-2">
-        Business 1
-      </h3>
-      <dl class="govuk-summary-list govuk-!-margin-bottom-4">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__value">
-            <h1 class="govuk-heading-s">Trading name</h1>
-          </dt>
-          <dd class="govuk-summary-list__value">
-            Fishpool Toys 
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__value">
-            <h1 class="govuk-heading-s">Registered or legal name</h1>
-          </dt>
-          <dd class="govuk-summary-list__value">
-            FISHPOOL TOYS LTD
-          </dd>
-        </div>
-        <p class="govuk-body govuk-!-margin-top-2">
-          <a href="#" class="govuk-link">View business record</a>
-        </p>
-      </dl>
+    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Dreamtime Bedding</h2>
 
-      <h3 class="govuk-heading-m govuk-!-margin-bottom-2">
-        Business 2
-      </h3>
-      <dl class="govuk-summary-list govuk-!-margin-bottom-4">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__value">
-            <h1 class="govuk-heading-s">Trading name</h1>
-          </dt>
-          <dd class="govuk-summary-list__value">
-            Peterson Toys and Games 
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__value">
-            <h1 class="govuk-heading-s">Registered or legal name</h1>
-          </dt>
-          <dd class="govuk-summary-list__value">
-            FISHPOOL TOYS LTD
-          </dd>
-        </div>
-        <p class="govuk-body govuk-!-margin-top-2">
-          <a href="#" class="govuk-link">View business record</a>
-        </p>
-      </dl>
+    <details class="govuk-details govuk-!-margin-bottom-2">
+      <summary class="govuk-details__summary">
+        <span class="govuk-details__summary-text">
+          More details
+        </span>
+      </summary>
+      <div class="govuk-details__text">
 
-      <h3 class="govuk-heading-m govuk-!-margin-bottom-2">
-        Business 3
-      </h3>
-      <dl class="govuk-summary-list">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__value">
-            <h1 class="govuk-heading-s">Trading name</h1>
-          </dt>
-          <dd class="govuk-summary-list__value">
-            Hargreaves Toys 
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__value">
-            <h1 class="govuk-heading-s">Registered or legal name</h1>
-          </dt>
-          <dd class="govuk-summary-list__value">
-            FISHPOOL TOYS LTD
-          </dd>
-        </div>
-        <p class="govuk-body govuk-!-margin-top-2">
-          <a href="#" class="govuk-link">View business record</a>
-        </p>
-      </dl>
+        <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Business details</h2>
 
-      <div class="govuk-form-group govuk-!-margin-top-6">
-        <fieldset class="govuk-fieldset" aria-describedby="signIn-hint">
-            <h3 class="govuk-heading-m">
-              What would you like to do?
-            </h3>
-          <div class="govuk-radios" data-module="govuk-radios">
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="signIn" name="signIn" type="radio" value="government-gateway" aria-describedby="signIn-item-hint">
-              <label class="govuk-label govuk-radios__label" for="signIn">
-                Continue creating a new business 
-              </label>
-              <div id="signIn-item-hint" class="govuk-hint govuk-radios__hint">
-                Only do this if you believe the new business is a different legal entity or the same legal entity operating with a different trading name.               </div>
-            </div>
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="signIn-2" name="signIn" type="radio" value="govuk-one-login" aria-describedby="signIn-2-item-hint">
-              <label class="govuk-label govuk-radios__label" for="signIn-2">
-                Use Business 1
-              </label>
-            </div>
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="signIn-2" name="signIn" type="radio" value="govuk-one-login" aria-describedby="signIn-2-item-hint">
-              <label class="govuk-label govuk-radios__label" for="signIn-2">
-                Use Business 2
-              </label>
-            </div>
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="signIn-2" name="signIn" type="radio" value="govuk-one-login" aria-describedby="signIn-2-item-hint">
-              <label class="govuk-label govuk-radios__label" for="signIn-2">
-                Use Business 3
-              </label>
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__value">
+              <h1 class="govuk-heading-s">Trading name</h1>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Dreamtime Bedding 
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__value">
+              <h1 class="govuk-heading-s">Registered or legal name</h1>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              DREAMTIME BEDDING LTD
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__value">
+              <h1 class="govuk-heading-s">Companies House number</h1>
+            </dt>
+            <dd class="govuk-summary-list__value">
+              012823551
+            </dd>
+          </div>
+        </dl>
+
+        <h2 class="govuk-heading-s govuk-!-margin-bottom-2 govuk-!-margin-top-6">Addresses</h2>
+
+
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
+          <div class="govuk-summary-list__row">
+            <dd class="govuk-summary-list__value">
+              65 Commercial Road, Liverpool, L5 9XE, United Kingdom 
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dd class="govuk-summary-list__value">
+              8 Valley Industrial Estate, Harlow, CM20 1EG, United Kingdom 
+            </dd>
+          </div>
+        </dl>
+
+        <h2 class="govuk-heading-s govuk-!-margin-bottom-2 govuk-!-margin-top-6">Contact details</h2>
+
+        <dl class="govuk-summary-list">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Aisling Patterson     
+              <p class="govuk-body govuk-!-margin-top-2 govuk-!-margin-bottom-0">Head of Marketing </p>
+            </dt>
+    
+            <dd class="govuk-summary-list__value">
+              <p class="govuk-body govuk-!-margin-bottom-2">aisling.patterson@batholomewtrading.co.uk </p>
+              <p class="govuk-body ">01279 443196 </p>
+            </dd>
+    
+          </div>
+        </dl>    
+
+      </div>
+    </details>
+
+    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Peterfield Beds</h2>
+
+    <details class="govuk-details govuk-!-margin-bottom-2">
+      <summary class="govuk-details__summary">
+        <span class="govuk-details__summary-text">
+          More details
+        </span>
+      </summary>
+      <div class="govuk-details__text">
+        Open the one above.        
+      </div>
+    </details>
+
+    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Beds & More </h2>
+
+    <details class="govuk-details govuk-!-margin-bottom-2">
+      <summary class="govuk-details__summary">
+        <span class="govuk-details__summary-text">
+          More details
+        </span>
+      </summary>
+      <div class="govuk-details__text">
+        Open the one above.        
+      </div>
+    </details>
+
+    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-bottom-8">
+
+
+    <div class="govuk-form-group govuk-!-margin-top-6">
+      <fieldset class="govuk-fieldset" aria-describedby="signIn-hint">
+          <h3 class="govuk-heading-m">
+            What would you like to do?
+          </h3>
+        <div class="govuk-radios" data-module="govuk-radios">
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="signIn" name="signIn" type="radio" value="government-gateway" aria-describedby="signIn-item-hint">
+            <label class="govuk-label govuk-radios__label" for="signIn">
+              Create new business using the Companies House record 
+            </label>
+            <div id="signIn-item-hint" class="govuk-hint govuk-radios__hint">
+              Only do this if you believe the new business is a different legal entity or the same legal entity operating with a different trading name.               </div>
             </div>
           </div>
-        </fieldset>
-      </div>
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="signIn-2" name="signIn" type="radio" value="govuk-one-login" aria-describedby="signIn-2-item-hint">
+            <label class="govuk-label govuk-radios__label" for="signIn-2">
+              Use Dreamtime Bedding
+            </label>
+          </div>
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="signIn-2" name="signIn" type="radio" value="govuk-one-login" aria-describedby="signIn-2-item-hint">
+            <label class="govuk-label govuk-radios__label" for="signIn-2">
+              Use Peterfield Beds
+            </label>
+          </div>
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="signIn-2" name="signIn" type="radio" value="govuk-one-login" aria-describedby="signIn-2-item-hint">
+            <label class="govuk-label govuk-radios__label" for="signIn-2">
+              Use Beds & More
+            </label>
+          </div>
+        </div>
+      </fieldset>
+    </div>
+  </div>
 
-      <button class="govuk-button" data-module="govuk-button">
-        Continue
-      </button>
 
-      <input type="hidden" name="business-details-trading_name" value="{{ data['business-details-trading_name'] if data['business-details-trading_name'] else "Fishpool Toys Ltd" }}" />
+    <button class="govuk-button" data-module="govuk-button">
+      Continue
+    </button>
 
-    </form>
+    <input type="hidden" name="business-details-trading_name" value="{{ data['business-details-trading_name'] if data['business-details-trading_name'] else "Dreamtime Bedding" }}" />
+
+  </form>
+
 
 {% endblock %}
