--- a/app/views/psd-revised-flow/add-business-to-notification/duplicate-business-ch-multiple.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/duplicate-business-ch-multiple.html
@@ -25,107 +25,117 @@
         This business is already in our database
       </h1>
 
-      <p class="govuk-body govuk-!-margin-top-8">These businesses have the same Registered name and Companies House number.</p>
+      <p class="govuk-body govuk-!-margin-top-8">There are <strong>3</strong> trading names associated with this business.</p>
 
 
-      <h3 class="govuk-heading-m govuk-!-margin-bottom-2">
-        Business 1
-      </h3>
-      <dl class="govuk-summary-list govuk-!-margin-bottom-4">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__value">
-            <h1 class="govuk-heading-s">Trading name</h1>
-          </dt>
-          <dd class="govuk-summary-list__value">
-            Dreamtime Bedding 
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__value">
-            <h1 class="govuk-heading-s">Registered or legal name</h1>
-          </dt>
-          <dd class="govuk-summary-list__value">
-            DREAMTIME BEDDING LTD
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__value">
-            <h1 class="govuk-heading-s">Companies House number</h1>
-          </dt>
-          <dd class="govuk-summary-list__value">
-            012823551
-          </dd>
-        </div>
-        <p class="govuk-body govuk-!-margin-top-2">
-          <a href="#" class="govuk-link">View business record</a>
-        </p>
-      </dl>
+      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
-      <h3 class="govuk-heading-m govuk-!-margin-bottom-2">
-        Business 2
-      </h3>
-      <dl class="govuk-summary-list govuk-!-margin-bottom-4">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__value">
-            <h1 class="govuk-heading-s">Trading name</h1>
-          </dt>
-          <dd class="govuk-summary-list__value">
-            Peterfield Beds  
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__value">
-            <h1 class="govuk-heading-s">Registered or legal name</h1>
-          </dt>
-          <dd class="govuk-summary-list__value">
-            DREAMTIME BEDDING LTD
-          </dd>
-        </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__value">
-            <h1 class="govuk-heading-s">Companies House number</h1>
-          </dt>
-          <dd class="govuk-summary-list__value">
-            012823551
-          </dd>
-        </div>
-        <p class="govuk-body govuk-!-margin-top-2">
-          <a href="#" class="govuk-link">View business record</a>
-        </p>
-      </dl>
+      <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Dreamtime Bedding</h2>
 
-      <h3 class="govuk-heading-m govuk-!-margin-bottom-2">
-        Business 3
-      </h3>
-      <dl class="govuk-summary-list">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__value">
-            <h1 class="govuk-heading-s">Trading name</h1>
-          </dt>
-          <dd class="govuk-summary-list__value">
-            Bed & More 
-          </dd>
+      <details class="govuk-details govuk-!-margin-bottom-2">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">
+            More details
+          </span>
+        </summary>
+        <div class="govuk-details__text">
+
+          <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Business details</h2>
+
+          <dl class="govuk-summary-list govuk-!-margin-bottom-4">
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__value">
+                <h1 class="govuk-heading-s">Trading name</h1>
+              </dt>
+              <dd class="govuk-summary-list__value">
+                Dreamtime Bedding 
+              </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__value">
+                <h1 class="govuk-heading-s">Registered or legal name</h1>
+              </dt>
+              <dd class="govuk-summary-list__value">
+                DREAMTIME BEDDING LTD
+              </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__value">
+                <h1 class="govuk-heading-s">Companies House number</h1>
+              </dt>
+              <dd class="govuk-summary-list__value">
+                012823551
+              </dd>
+            </div>
+          </dl>
+
+          <h2 class="govuk-heading-s govuk-!-margin-bottom-2 govuk-!-margin-top-6">Addresses</h2>
+
+
+          <dl class="govuk-summary-list govuk-!-margin-bottom-4">
+            <div class="govuk-summary-list__row">
+              <dd class="govuk-summary-list__value">
+                65 Commercial Road, Liverpool, L5 9XE, United Kingdom 
+              </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+              <dd class="govuk-summary-list__value">
+                8 Valley Industrial Estate, Harlow, CM20 1EG, United Kingdom 
+              </dd>
+            </div>
+          </dl>
+
+          <h2 class="govuk-heading-s govuk-!-margin-bottom-2 govuk-!-margin-top-6">Contact details</h2>
+
+          <dl class="govuk-summary-list">
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Aisling Patterson     
+                <p class="govuk-body govuk-!-margin-top-2 govuk-!-margin-bottom-0">Head of Marketing </p>
+              </dt>
+      
+              <dd class="govuk-summary-list__value">
+                <p class="govuk-body govuk-!-margin-bottom-2">aisling.patterson@batholomewtrading.co.uk </p>
+                <p class="govuk-body ">01279 443196 </p>
+              </dd>
+      
+            </div>
+          </dl>    
+
         </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__value">
-            <h1 class="govuk-heading-s">Registered or legal name</h1>
-          </dt>
-          <dd class="govuk-summary-list__value">
-            DREAMTIME BEDDING LTD
-          </dd>
+      </details>
+
+      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+      <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Peterfield Beds</h2>
+
+      <details class="govuk-details govuk-!-margin-bottom-2">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">
+            More details
+          </span>
+        </summary>
+        <div class="govuk-details__text">
+          Open the one above.        
         </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__value">
-            <h1 class="govuk-heading-s">Companies House number</h1>
-          </dt>
-          <dd class="govuk-summary-list__value">
-            012823551
-          </dd>
+      </details>
+
+      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+      <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Beds & More </h2>
+
+      <details class="govuk-details govuk-!-margin-bottom-2">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">
+            More details
+          </span>
+        </summary>
+        <div class="govuk-details__text">
+          Open the one above.        
         </div>
-        <p class="govuk-body govuk-!-margin-top-2">
-          <a href="#" class="govuk-link">View business record</a>
-        </p>
-      </dl>
+      </details>
+
+      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-bottom-8">
 
 
       <div class="govuk-form-group govuk-!-margin-top-6">
@@ -146,19 +156,19 @@
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="signIn-2" name="signIn" type="radio" value="govuk-one-login" aria-describedby="signIn-2-item-hint">
               <label class="govuk-label govuk-radios__label" for="signIn-2">
-                Use Business 1
+                Use Dreamtime Bedding
               </label>
             </div>
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="signIn-2" name="signIn" type="radio" value="govuk-one-login" aria-describedby="signIn-2-item-hint">
               <label class="govuk-label govuk-radios__label" for="signIn-2">
-                Use Business 2
+                Use Peterfield Beds
               </label>
             </div>
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="signIn-2" name="signIn" type="radio" value="govuk-one-login" aria-describedby="signIn-2-item-hint">
               <label class="govuk-label govuk-radios__label" for="signIn-2">
-                Use Business 3
+                Use Beds & More
               </label>
             </div>
           </div>
