--- a/app/views/psd-revised-flow/add-business-to-notification/duplicate-business-add-single.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/duplicate-business-add-single.html
@@ -28,7 +28,56 @@
       <p class="govuk-body govuk-!-margin-top-8">We have found <strong>1</strong> business with shared details.</p>
   
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+      <span class="govuk-caption-m">Your business</span>
+      <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Dreamtime Bedding Ltd</h2>
   
+      <details class="govuk-details govuk-!-margin-bottom-2">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">
+            More details
+          </span>
+        </summary>
+        <div class="govuk-details__text">
+  
+          <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Business details</h2>
+  
+          <dl class="govuk-summary-list govuk-!-margin-bottom-4">
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__value">
+                <h1 class="govuk-heading-s">Trading name</h1>
+              </dt>
+              <dd class="govuk-summary-list__value">
+                Dreamtime Bedding Ltd
+              </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__value">
+                <h1 class="govuk-heading-s">Registered or legal name</h1>
+              </dt>
+              <dd class="govuk-summary-list__value">
+                Dreamtime Bedding Ltd
+              </dd>
+            </div>
+          </dl>
+  
+          <h2 class="govuk-heading-s govuk-!-margin-bottom-2 govuk-!-margin-top-6">Addresses</h2>
+  
+  
+          <dl class="govuk-summary-list govuk-!-margin-bottom-4">
+            <div class="govuk-summary-list__row">
+              <dd class="govuk-summary-list__value">
+                65 Commercial Road, Liverpool, L5 9XE, United Kingdom 
+              </dd>
+            </div>
+          </dl>
+    
+        </div>
+      </details>
+  
+      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+      <span class="govuk-caption-m">Business in the database</span>
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Dreamtime Bedding</h2>
   
       <details class="govuk-details govuk-!-margin-bottom-2">
@@ -103,10 +152,12 @@
   
         </div>
       </details>
+
+      
   
   
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-bottom-8">
-  
+
   
       <div class="govuk-form-group govuk-!-margin-top-6">
         <fieldset class="govuk-fieldset" aria-describedby="signIn-hint">
