--- a/app/views/psd-revised-flow/add-new-product/added-product.html
+++ b/app/views/psd-revised-flow/add-new-product/added-product.html
@@ -4,7 +4,7 @@
   Business added – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
-{% set title = "Search for or add a product " %}
+{% set title = "Choose the product for your notification" %}
 
 {% block beforeContent %}
   {{ govukBackLink({
