--- a/app/views/psd-revised-flow/add-new-product/happy-photo.html
+++ b/app/views/psd-revised-flow/add-new-product/happy-photo.html
@@ -4,7 +4,7 @@
   Bartholomew Trading Ltd – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
-{% set title = "Add businesses and their roles in the supply chain" %}
+{% set title = "Choose the product for your notification" %}
 
 {% block beforeContent %}
   {{ govukBackLink({
@@ -20,6 +20,7 @@
 
       <form class="form" action="add-a-photo" method="post">
 
+        <span class="govuk-caption-l">{{title}}</span>
 
       <h1 class="govuk-heading-l govuk-!-margin-bottom-9">Uploaded photo</h1>
 
