--- a/app/views/psd-revised-flow/add-new-product/uploading-photo.html
+++ b/app/views/psd-revised-flow/add-new-product/uploading-photo.html
@@ -4,7 +4,7 @@
   Bartholomew Trading Ltd – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
-{% set title = "Add businesses and their roles in the supply chain" %}
+{% set title = "Choose the product for your notification" %}
 
 {% block beforeContent %}
   {{ govukBackLink({
@@ -18,6 +18,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
+      <span class="govuk-caption-l">{{title}}</span>
       <h1 class="govuk-heading-l govuk-!-margin-bottom-9">Add a product image</h1>
 
       <div class="how-to-photo-container">
