--- a/app/assets/sass/psd-menu.scss
+++ b/app/assets/sass/psd-menu.scss
@@ -947,8 +947,8 @@ ul#navigation.psd-header__navigation {
 .custom-table {
   width: 100%;
   border-collapse: collapse;
-  border-top: 1px solid #B1B4B6;
-  border-bottom: 1px solid #B1B4B6;
+  border-top: 1px solid #b1b4b6;
+  border-bottom: 1px solid #b1b4b6;
 }
 
 .custom-table td {
@@ -971,4 +971,3 @@ ul#navigation.psd-header__navigation {
   padding: 10px 0;
   text-align: right;
 }
-
