--- a/app/views/psd-revised-flow/add-new-product/happy-photo.html
+++ b/app/views/psd-revised-flow/add-new-product/happy-photo.html
@@ -27,16 +27,14 @@
 
 
 
-      <div class="how-to-photo-column">
-        <img src="../../public/images/pt_sport_own.png" alt="Car seat 1" width="400" height="400">
+      <div class="how-to-photo-column govuk-!-margin-bottom-6">
+        <img src="../../public/images/p+t-taken.png" alt="Car seat 1" width="400" height="400">
         <div class="how-to-photo-container govuk-!-margin-top-1">
         <img src="../../public/images/rotate.svg" alt="Tick">
         <a href="#">Rotate image</a>
       </div>
       </div>
-      
-      <br>
-
+    
     <div class="button-container">
       <button type="submit" class="govuk-button" data-module="govuk-button">
         Save and continue
