--- a/app/views/psd-revised-flow/add-new-product/edit-product-information.html
+++ b/app/views/psd-revised-flow/add-new-product/edit-product-information.html
@@ -1,7 +1,7 @@
 {% extends "layout-psd-menu_home.html" %}
 
 {% block pageTitle %}
-Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
+Edit product information – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% set title = "Choose the product for your notification" %}
@@ -113,7 +113,7 @@ Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
         </div>
 
       </fieldset>
-      
+
       <fieldset class="govuk-fieldset govuk-!-margin-bottom-6">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Product category</legend>
 
