--- a/app/views/psd-revised-flow/add-new-product/not-found.html
+++ b/app/views/psd-revised-flow/add-new-product/not-found.html
@@ -1,7 +1,7 @@
 {% extends "layout-psd-menu_home.html" %}
 
 {% block pageTitle %}
-  Bartholomew Trading Ltd – {{ serviceName }} – GOV.UK Prototype Kit
+  Product not found – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% set title = "Choose the product for your notification" %}
