--- a/app/views/psd-revised-flow/add-new-product/task-list-finish.html
+++ b/app/views/psd-revised-flow/add-new-product/task-list-finish.html
@@ -1,7 +1,7 @@
 {% extends "layout-psd-menu_home.html" %}
 
 {% block pageTitle %}
-Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
+Create a product safety notification – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
