--- a/app/views/psd-revised-flow/add-new-product/add-product-information.html
+++ b/app/views/psd-revised-flow/add-new-product/add-product-information.html
@@ -1,7 +1,7 @@
 {% extends "layout-psd-menu_home.html" %}
 
 {% block pageTitle %}
-Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
+Add product information – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% set title = "Choose the product for your notification" %}
