--- a/app/views/psd-revised-flow/add-new-product/added-product-2.html
+++ b/app/views/psd-revised-flow/add-new-product/added-product-2.html
@@ -32,10 +32,10 @@
                 <img src="../../public/images/p+t-taken.png" alt="Image" class="table-image">
               </td>
               <td class="table-content " colspan="2">
-                <h4 class="govuk-heading-s govuk-!-margin-bottom-1">phil&teds sport™ </h4>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Baby & Toddler</p>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Baby Transport Accessories</p>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>psd-436</p>
+                <h4 class="govuk-heading-s govuk-!-margin-bottom-1">Acer Aspire 3 </h4>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Electricals</p>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Laptop</p>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>psd-425</p>
               </td>
             </tr>
           </tbody>
