--- a/app/views/psd-revised-flow/add-new-product/task-list-start.html
+++ b/app/views/psd-revised-flow/add-new-product/task-list-start.html
@@ -1,7 +1,7 @@
 {% extends "layout-psd-menu_home.html" %}
 
 {% block pageTitle %}
-Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
+Create a product safety notification – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
@@ -45,7 +45,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
       <ul class="app-task-list__items">
         <li class="app-task-list__item">
           <span class="app-task-list__task-name">
-            <a href="#">Search for or add a product</a>
+            <a href="search-products">Search for or add a product</a>
           </span>
 
           <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="medical-information-status">Not started</strong>
