--- a/app/assets/sass/psd-menu.scss
+++ b/app/assets/sass/psd-menu.scss
@@ -1019,7 +1019,5 @@ ul#navigation.psd-header__navigation {
 }
 
 .summary-content img {
-  margin-right: 5px; /* Adjust margin as needed */
+  margin-right: 5px; 
 }
-
-
