--- a/app/views/index.html
+++ b/app/views/index.html
@@ -53,6 +53,8 @@
 
  <p><a href="/psd-revised-flow/add-business-to-notification/start-page">Add businesses to notification</a></p>
 
+ <p><a href="/psd-revised-flow/add-new-product/task-list-start">Add product to notification</a></p>
+
 
 
 
