--- a/app/views/psd-revised-flow/add-new-product/add-product-information.html
+++ b/app/views/psd-revised-flow/add-new-product/add-product-information.html
@@ -21,7 +21,7 @@ Add product information – {{ serviceName }} – GOV.UK Prototype Kit
  <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form class="form govuk-!-margin-bottom-6" action="enter-product-details" method="post">
+    <form class="form govuk-!-margin-bottom-6" action="add-product-information" method="post">
       <span class="govuk-caption-l">{{title}}</span>
 
 
