--- a/app/views/psd-revised-flow/add-new-product/added-product.html
+++ b/app/views/psd-revised-flow/add-new-product/added-product.html
@@ -54,14 +54,14 @@
             </legend>
             <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="changedName" name="changedName" type="radio" value="yes">
-                <label class="govuk-label govuk-radios__label" for="changedName">
+                <input class="govuk-radios__input" id="addedProduct" name="addedProduct" type="radio" value="yes">
+                <label class="govuk-label govuk-radios__label" for="addedProduct">
                   Yes
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="changedName-2" name="changedName" type="radio" value="no">
-                <label class="govuk-label govuk-radios__label" for="changedName-2">
+                <input class="govuk-radios__input" id="addedProduct-2" name="addedProduct" type="radio" value="no">
+                <label class="govuk-label govuk-radios__label" for="addedProduct-2">
                   No
                 </label>
               </div>
@@ -73,5 +73,8 @@
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
           </button>
+
+        </form>
+
 
 {% endblock %}
