--- a/app/views/psd-revised-flow/add-new-product/do-you-have-barcode.html
+++ b/app/views/psd-revised-flow/add-new-product/do-you-have-barcode.html
@@ -33,13 +33,13 @@
       </div>
       <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="haveBarcode-1" name="haveBarcode" type="radio" value="yes">
+          <input class="govuk-radios__input" id="haveBarcode-1" name="have-barcode" type="radio" value="yes">
           <label class="govuk-label govuk-radios__label" for="haveBarcode-1">
             Yes
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="haveBarcode-2" name="haveBarcode" type="radio" value="no">
+          <input class="govuk-radios__input" id="haveBarcode-2" name="have-barcode" type="radio" value="no">
           <label class="govuk-label govuk-radios__label" for="haveBarcode-2">
             No
           </label>
