--- a/app/views/psd-revised-flow/add-new-product/not-found.html
+++ b/app/views/psd-revised-flow/add-new-product/not-found.html
@@ -31,11 +31,11 @@
       <p>Please enter a new barcode / Amazon ASIN or enter the product details manually.</p>
 
       <div class="button-container">
-        <button type="submit" class="govuk-button" data-module="govuk-button">
+        <button type="submit" class="govuk-button" data-module="govuk-button" id="not-found-it-1" name="not-found-it" value="yes">
           Add another barcode or ASIN
         </button>
           <p class="govuk-body-m">or</p>
-        <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+        <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button" id="not-found-it-2" name="not-found-it" value="manual">
           Enter details manually  
         </button>
       </div>
