--- a/app/views/psd-revised-flow/add-new-product/task-list-finish.html
+++ b/app/views/psd-revised-flow/add-new-product/task-list-finish.html
@@ -45,7 +45,7 @@ Create a product safety notification – {{ serviceName }} – GOV.UK Prototype 
       <ul class="app-task-list__items">
         <li class="app-task-list__item">
           <span class="app-task-list__task-name">
-            <a href="#">Search for or add a product</a>
+            <a href="search-products">Search for or add a product</a>
           </span>
 
           <strong class="govuk-tag app-task-list__tag" id="company-information-status">Completed</strong>
