--- a/app/views/psd-revised-flow/add-new-product/duplicate.html
+++ b/app/views/psd-revised-flow/add-new-product/duplicate.html
@@ -46,8 +46,7 @@
                 </summary>
                 <div class="govuk-details__text">
                   <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Barcode: </strong>0 456324 345987</p>
-                  <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Other product identifiers: </strong>ASIN 232345</p>    
-                  <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Description: </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>    
+                  <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Description: </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>    
                 </div>
               </details>
             </td>
@@ -68,6 +67,8 @@
               <h4 class="govuk-heading-s govuk-!-margin-bottom-1">phil&teds sport™ </h4>
               <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Baby & Toddler</p>
               <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Baby Transport Accessories</p>
+              <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>psd-436</p>
+
               <details class="govuk-details govuk-!-margin-bottom-0">
                 <summary class="govuk-details__summary govuk-body-xs">
                   <span class="govuk-details__summary-text">
@@ -94,14 +95,14 @@
             </h3>
           <div class="govuk-radios" data-module="govuk-radios">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="signIn" name="signIn" type="radio" value="government-gateway" aria-describedby="signIn-item-hint">
-              <label class="govuk-label govuk-radios__label" for="signIn">
+              <input class="govuk-radios__input" id="which-one" name="which-one" type="radio" value="yes" aria-describedby="signIn-item-hint">
+              <label class="govuk-label govuk-radios__label" for="which-one">
                 Create new product record   
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="signIn-2" name="signIn" type="radio" value="govuk-one-login" aria-describedby="signIn-2-item-hint">
-              <label class="govuk-label govuk-radios__label" for="signIn-2">
+              <input class="govuk-radios__input" id="which-one-2" name="which-one" type="radio" value="no" aria-describedby="signIn-2-item-hint">
+              <label class="govuk-label govuk-radios__label" for="which-one-2">
                 Use the product in the database
               </label>
             </div>
